pkg/sql/parser/sql.output

state 0
	$accept: .stmt_block $end 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	stmt_block  goto 1
	stmt  goto 2
	select_stmt  goto 3
	relation  goto 4
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 11
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 1
	$accept:  stmt_block.$end 

	$end  accept
	.  error


state 2
	stmt_block:  stmt.    (1)

	.  reduce 1 (src line 320)


state 3
	stmt:  select_stmt.    (2)

	.  reduce 2 (src line 322)


state 4
	select_stmt:  relation.opt_order_clause opt_fetch_clause 
	select_clause:  relation.    (108)
	opt_order_clause: .    (5)

	$end  reduce 5 (src line 336)
	FETCH  reduce 5 (src line 336)
	OFFSET  reduce 5 (src line 336)
	ORDER  shift 17
	')'  reduce 5 (src line 336)
	.  reduce 108 (src line 619)

	order_clause  goto 16
	opt_order_clause  goto 15

state 5
	relation:  table_name.    (29)

	.  reduce 29 (src line 404)


state 6
	relation:  join_clause.    (30)

	.  reduce 30 (src line 405)


state 7
	relation:  union_clause.    (31)

	.  reduce 31 (src line 406)


state 8
	relation:  simple_select.    (32)

	.  reduce 32 (src line 407)


state 9
	relation:  '('.select_stmt ')' opt_alias_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	select_stmt  goto 18
	relation  goto 4
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 11
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 10
	table_name:  column_name.    (128)
	column_name:  column_name.'.' name 
	column_name:  column_name.'.' name '[' a_expr ']' 

	'.'  shift 19
	.  reduce 128 (src line 723)


state 11
	union_clause:  select_clause.UNION all_or_distinct select_clause 
	union_clause:  select_clause.INTERSECT all_or_distinct select_clause 
	union_clause:  select_clause.EXCEPT all_or_distinct select_clause 
	join_clause:  select_clause.CROSS JOIN select_clause 
	join_clause:  select_clause.join_type JOIN select_clause join_qual 
	join_clause:  select_clause.JOIN select_clause join_qual 
	join_clause:  select_clause.NATURAL JOIN select_clause 

	CROSS  shift 23
	EXCEPT  shift 22
	FULL  shift 27
	INNER  shift 30
	INTERSECT  shift 21
	JOIN  shift 25
	NATURAL  shift 26
	RIGHT  shift 29
	UNION  shift 20
	LEFT  shift 28
	.  error

	join_type  goto 24

state 12
	simple_select:  SELECT.target_list from_clause opt_where_clause group_clause having_clause 
	simple_select:  SELECT.distinct_clause target_list from_clause opt_where_clause group_clause having_clause 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	DISTINCT  shift 34
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'*'  shift 36
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	distinct_clause  goto 32
	target_list  goto 31
	a_expr  goto 35
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	target_elem  goto 33
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 13
	column_name:  name.    (129)
	column_name:  name.'[' a_expr ']' 

	'['  shift 59
	.  reduce 129 (src line 730)


state 14
	name:  IDENT.    (137)

	.  reduce 137 (src line 762)


state 15
	select_stmt:  relation opt_order_clause.opt_fetch_clause 
	opt_fetch_clause: .    (14)

	FETCH  shift 64
	OFFSET  shift 65
	.  reduce 14 (src line 357)

	fetch_clause  goto 61
	opt_fetch_clause  goto 60
	limit_clause  goto 62
	offset_clause  goto 63

state 16
	opt_order_clause:  order_clause.    (4)

	.  reduce 4 (src line 335)


state 17
	order_clause:  ORDER.BY order_list 

	BY  shift 66
	.  error


state 18
	relation:  '(' select_stmt.')' opt_alias_clause 

	')'  shift 67
	.  error


state 19
	column_name:  column_name '.'.name 
	column_name:  column_name '.'.name '[' a_expr ']' 

	IDENT  shift 14
	.  error

	name  goto 68

state 20
	union_clause:  select_clause UNION.all_or_distinct select_clause 
	all_or_distinct: .    (114)

	ALL  shift 70
	DISTINCT  shift 71
	.  reduce 114 (src line 653)

	all_or_distinct  goto 69

state 21
	union_clause:  select_clause INTERSECT.all_or_distinct select_clause 
	all_or_distinct: .    (114)

	ALL  shift 70
	DISTINCT  shift 71
	.  reduce 114 (src line 653)

	all_or_distinct  goto 72

state 22
	union_clause:  select_clause EXCEPT.all_or_distinct select_clause 
	all_or_distinct: .    (114)

	ALL  shift 70
	DISTINCT  shift 71
	.  reduce 114 (src line 653)

	all_or_distinct  goto 73

state 23
	join_clause:  select_clause CROSS.JOIN select_clause 

	JOIN  shift 74
	.  error


state 24
	join_clause:  select_clause join_type.JOIN select_clause join_qual 

	JOIN  shift 75
	.  error


state 25
	join_clause:  select_clause JOIN.select_clause join_qual 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 77
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 76
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 26
	join_clause:  select_clause NATURAL.JOIN select_clause 

	JOIN  shift 78
	.  error


state 27
	join_type:  FULL.join_outer 
	join_outer: .    (125)

	OUTER  shift 80
	.  reduce 125 (src line 702)

	join_outer  goto 79

state 28
	join_type:  LEFT.join_outer 
	join_outer: .    (125)

	OUTER  shift 80
	.  reduce 125 (src line 702)

	join_outer  goto 81

state 29
	join_type:  RIGHT.join_outer 
	join_outer: .    (125)

	OUTER  shift 80
	.  reduce 125 (src line 702)

	join_outer  goto 82

state 30
	join_type:  INNER.    (123)

	.  reduce 123 (src line 699)


state 31
	simple_select:  SELECT target_list.from_clause opt_where_clause group_clause having_clause 
	target_list:  target_list.',' target_elem 
	from_clause: .    (44)

	FROM  shift 85
	','  shift 84
	.  reduce 44 (src line 484)

	from_clause  goto 83

state 32
	simple_select:  SELECT distinct_clause.target_list from_clause opt_where_clause group_clause having_clause 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'*'  shift 36
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	target_list  goto 86
	a_expr  goto 35
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	target_elem  goto 33
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 33
	target_list:  target_elem.    (37)

	.  reduce 37 (src line 444)


state 34
	distinct_clause:  DISTINCT.    (36)

	.  reduce 36 (src line 440)


state 35
	target_elem:  a_expr.    (39)
	target_elem:  a_expr.target_name 
	target_elem:  a_expr.AS target_name 
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 

	IDENT  shift 14
	AND  shift 90
	AS  shift 88
	IS  shift 91
	OR  shift 89
	.  reduce 39 (src line 461)

	name  goto 92
	target_name  goto 87

state 36
	target_elem:  '*'.    (42)

	.  reduce 42 (src line 473)


state 37
	a_expr:  c_expr.    (56)

	.  reduce 56 (src line 523)


state 38
	a_expr:  NOT.a_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	a_expr  goto 93
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 39
	a_expr:  b_expr.    (62)
	b_expr:  b_expr.'+' b_expr 
	b_expr:  b_expr.'-' b_expr 
	b_expr:  b_expr.'*' b_expr 
	b_expr:  b_expr.'/' b_expr 
	b_expr:  b_expr.'%' b_expr 
	c_expr:  b_expr.'<' b_expr 
	c_expr:  b_expr.'>' b_expr 
	c_expr:  b_expr.'=' b_expr 
	c_expr:  b_expr.LESS_EQUALS b_expr 
	c_expr:  b_expr.GREATER_EQUALS b_expr 
	c_expr:  b_expr.NOT_EQUALS b_expr 
	c_expr:  b_expr.BETWEEN b_expr AND b_expr 
	c_expr:  b_expr.NOT_LA BETWEEN b_expr AND b_expr 

	LESS_EQUALS  shift 102
	GREATER_EQUALS  shift 103
	NOT_EQUALS  shift 104
	BETWEEN  shift 105
	NOT_LA  shift 106
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'%'  shift 98
	'<'  shift 99
	'>'  shift 100
	'='  shift 101
	.  reduce 62 (src line 529)


state 40
	c_expr:  EXISTS.subquery 

	'('  shift 53
	.  error

	subquery  goto 107

state 41
	b_expr:  d_expr.    (63)

	.  reduce 63 (src line 531)


state 42
	b_expr:  subquery.    (64)

	.  reduce 64 (src line 532)


state 43
	b_expr:  column_name.    (65)
	column_name:  column_name.'.' name 
	column_name:  column_name.'.' name '[' a_expr ']' 

	'.'  shift 19
	.  reduce 65 (src line 533)


state 44
	b_expr:  '+'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 108
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 45
	b_expr:  '-'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 109
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 46
	b_expr:  func_expr.    (73)

	.  reduce 73 (src line 541)


state 47
	d_expr:  ICONST.    (83)

	.  reduce 83 (src line 556)


state 48
	d_expr:  FCONST.    (84)

	.  reduce 84 (src line 557)


state 49
	d_expr:  SCONST.    (85)

	.  reduce 85 (src line 558)


state 50
	d_expr:  TRUE.    (86)

	.  reduce 86 (src line 559)


state 51
	d_expr:  FALSE.    (87)

	.  reduce 87 (src line 560)


state 52
	d_expr:  NULL.    (88)

	.  reduce 88 (src line 561)


state 53
	subquery:  '('.select_stmt ')' 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	select_stmt  goto 110
	relation  goto 4
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 11
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 54
	column_name:  name.    (129)
	column_name:  name.'[' a_expr ']' 
	func_name:  name.    (138)

	'['  shift 59
	'('  reduce 138 (src line 764)
	.  reduce 129 (src line 730)


state 55
	func_expr:  func_application.    (92)

	.  reduce 92 (src line 569)


state 56
	func_expr:  func_expr_common_subexpr.    (93)

	.  reduce 93 (src line 573)


state 57
	func_application:  func_name.'(' ')' 
	func_application:  func_name.'(' expr_list ')' 

	'('  shift 111
	.  error


state 58
	func_expr_common_subexpr:  CAST.'(' a_expr AS cast_target ')' 

	'('  shift 112
	.  error


state 59
	column_name:  name '['.a_expr ']' 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	a_expr  goto 113
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 60
	select_stmt:  relation opt_order_clause opt_fetch_clause.    (3)

	.  reduce 3 (src line 324)


state 61
	opt_fetch_clause:  fetch_clause.    (13)

	.  reduce 13 (src line 356)


state 62
	fetch_clause:  limit_clause.offset_clause 
	fetch_clause:  limit_clause.    (17)

	OFFSET  shift 65
	.  reduce 17 (src line 375)

	offset_clause  goto 114

state 63
	fetch_clause:  offset_clause.limit_clause 
	fetch_clause:  offset_clause.    (18)

	FETCH  shift 64
	.  reduce 18 (src line 379)

	limit_clause  goto 115

state 64
	limit_clause:  FETCH.first_or_next opt_select_fetch_first_value row_or_rows ONLY 

	FIRST  shift 117
	NEXT  shift 118
	.  error

	first_or_next  goto 116

state 65
	offset_clause:  OFFSET.a_expr 
	offset_clause:  OFFSET.d_expr row_or_rows 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	a_expr  goto 119
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 120
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 66
	order_clause:  ORDER BY.order_list 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	order_list  goto 121
	a_expr  goto 123
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	order  goto 122
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 67
	relation:  '(' select_stmt ')'.opt_alias_clause 
	opt_alias_clause: .    (106)

	IDENT  shift 14
	AS  shift 126
	.  reduce 106 (src line 612)

	name  goto 128
	table_alias_name  goto 127
	alias_clause  goto 125
	opt_alias_clause  goto 124

state 68
	column_name:  column_name '.' name.    (131)
	column_name:  column_name '.' name.'[' a_expr ']' 

	'['  shift 129
	.  reduce 131 (src line 738)


state 69
	union_clause:  select_clause UNION all_or_distinct.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 77
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 130
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 70
	all_or_distinct:  ALL.    (112)

	.  reduce 112 (src line 651)


state 71
	all_or_distinct:  DISTINCT.    (113)

	.  reduce 113 (src line 652)


state 72
	union_clause:  select_clause INTERSECT all_or_distinct.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 77
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 131
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 73
	union_clause:  select_clause EXCEPT all_or_distinct.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 77
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 132
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 74
	join_clause:  select_clause CROSS JOIN.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 77
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 133
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 75
	join_clause:  select_clause join_type JOIN.select_clause join_qual 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 77
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 134
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 76
	union_clause:  select_clause.UNION all_or_distinct select_clause 
	union_clause:  select_clause.INTERSECT all_or_distinct select_clause 
	union_clause:  select_clause.EXCEPT all_or_distinct select_clause 
	join_clause:  select_clause.CROSS JOIN select_clause 
	join_clause:  select_clause.join_type JOIN select_clause join_qual 
	join_clause:  select_clause.JOIN select_clause join_qual 
	join_clause:  select_clause JOIN select_clause.join_qual 
	join_clause:  select_clause.NATURAL JOIN select_clause 

	CROSS  shift 23
	EXCEPT  shift 22
	FULL  shift 27
	INNER  shift 30
	INTERSECT  shift 21
	JOIN  shift 25
	NATURAL  shift 26
	ON  shift 136
	RIGHT  shift 29
	UNION  shift 20
	LEFT  shift 28
	.  error

	join_qual  goto 135
	join_type  goto 24

state 77
	select_clause:  relation.    (108)

	.  reduce 108 (src line 619)


state 78
	join_clause:  select_clause NATURAL JOIN.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 77
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 137
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 79
	join_type:  FULL join_outer.    (120)

	.  reduce 120 (src line 696)


state 80
	join_outer:  OUTER.    (124)

	.  reduce 124 (src line 701)


state 81
	join_type:  LEFT join_outer.    (121)

	.  reduce 121 (src line 697)


state 82
	join_type:  RIGHT join_outer.    (122)

	.  reduce 122 (src line 698)


state 83
	simple_select:  SELECT target_list from_clause.opt_where_clause group_clause having_clause 
	opt_where_clause: .    (48)

	WHERE  shift 140
	.  reduce 48 (src line 501)

	where_clause  goto 139
	opt_where_clause  goto 138

state 84
	target_list:  target_list ','.target_elem 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'*'  shift 36
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	a_expr  goto 35
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	target_elem  goto 141
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 85
	from_clause:  FROM.from_list 

	IDENT  shift 14
	'('  shift 53
	.  error

	subquery  goto 145
	name  goto 13
	table_name  goto 144
	column_name  goto 10
	from_list  goto 142
	table_ref  goto 143

state 86
	simple_select:  SELECT distinct_clause target_list.from_clause opt_where_clause group_clause having_clause 
	target_list:  target_list.',' target_elem 
	from_clause: .    (44)

	FROM  shift 85
	','  shift 84
	.  reduce 44 (src line 484)

	from_clause  goto 146

state 87
	target_elem:  a_expr target_name.    (40)

	.  reduce 40 (src line 465)


state 88
	target_elem:  a_expr AS.target_name 

	IDENT  shift 14
	.  error

	name  goto 92
	target_name  goto 147

state 89
	a_expr:  a_expr OR.a_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	a_expr  goto 148
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 90
	a_expr:  a_expr AND.a_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	a_expr  goto 149
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 91
	a_expr:  a_expr IS.NULL 
	a_expr:  a_expr IS.NOT NULL 

	NOT  shift 151
	NULL  shift 150
	.  error


state 92
	target_name:  name.    (139)

	.  reduce 139 (src line 766)


state 93
	a_expr:  NOT a_expr.    (57)
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 

	IS  shift 91
	.  reduce 57 (src line 524)


state 94
	b_expr:  b_expr '+'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 152
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 95
	b_expr:  b_expr '-'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 153
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 96
	b_expr:  b_expr '*'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 154
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 97
	b_expr:  b_expr '/'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 155
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 98
	b_expr:  b_expr '%'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 156
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 99
	c_expr:  b_expr '<'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 157
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 100
	c_expr:  b_expr '>'.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 158
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 101
	c_expr:  b_expr '='.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 159
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 102
	c_expr:  b_expr LESS_EQUALS.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 160
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 103
	c_expr:  b_expr GREATER_EQUALS.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 161
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 104
	c_expr:  b_expr NOT_EQUALS.b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 162
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 105
	c_expr:  b_expr BETWEEN.b_expr AND b_expr 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	FALSE  shift 51
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	b_expr  goto 163
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 106
	c_expr:  b_expr NOT_LA.BETWEEN b_expr AND b_expr 

	BETWEEN  shift 164
	.  error


state 107
	c_expr:  EXISTS subquery.    (82)

	.  reduce 82 (src line 551)


state 108
	b_expr:  '+' b_expr.    (66)
	b_expr:  b_expr.'+' b_expr 
	b_expr:  b_expr.'-' b_expr 
	b_expr:  b_expr.'*' b_expr 
	b_expr:  b_expr.'/' b_expr 
	b_expr:  b_expr.'%' b_expr 

	'*'  shift 96
	'/'  shift 97
	'%'  shift 98
	.  reduce 66 (src line 534)


state 109
	b_expr:  '-' b_expr.    (67)
	b_expr:  b_expr.'+' b_expr 
	b_expr:  b_expr.'-' b_expr 
	b_expr:  b_expr.'*' b_expr 
	b_expr:  b_expr.'/' b_expr 
	b_expr:  b_expr.'%' b_expr 

	'*'  shift 96
	'/'  shift 97
	'%'  shift 98
	.  reduce 67 (src line 535)


state 110
	subquery:  '(' select_stmt.')' 

	')'  shift 165
	.  error


state 111
	func_application:  func_name '('.')' 
	func_application:  func_name '('.expr_list ')' 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	')'  shift 166
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	expr_list  goto 167
	a_expr  goto 168
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 112
	func_expr_common_subexpr:  CAST '('.a_expr AS cast_target ')' 

	IDENT  shift 14
	ICONST  shift 47
	FCONST  shift 48
	SCONST  shift 49
	CAST  shift 58
	EXISTS  shift 40
	FALSE  shift 51
	NOT  shift 38
	NULL  shift 52
	TRUE  shift 50
	'+'  shift 44
	'-'  shift 45
	'('  shift 53
	.  error

	subquery  goto 42
	name  goto 54
	func_name  goto 57
	column_name  goto 43
	a_expr  goto 169
	b_expr  goto 39
	c_expr  goto 37
	d_expr  goto 41
	func_application  goto 55
	func_expr_common_subexpr  goto 56
	func_expr  goto 46

state 113
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 
	column_name:  name '[' a_expr.']' 

	AND  shift 90
	IS  shift 91
	OR  shift 89
	']'  shift 170
	.  error

